Catching up after a few days with no github access..starting on the CellValidationAttribute feature

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -60,6 +60,8 @@
   <ItemGroup>
     <Compile Include="Unit\CellTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unit\BoardTest.cs" />
+    <Compile Include="Unit\CellValidationAttributeTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\sudokit\sudokit.csproj">
